--- a/数据及对象的反对称性/德墨忒尔律.md
+++ b/数据及对象的反对称性/德墨忒尔律.md
@@ -16,16 +16,21 @@
 
 下面代码违反得墨忒尔律，因为它调用了getOptions()返回的值得getScratchDir()函数， 又调用了getScratchDir()返回值的getAbsolutePath()方法
 
-##### bad code
-
 ```java
 final String outputDir = ctxt.getOptions().getScratchDir().getAbsolutePath()
 ```
-
-##### better code
+#### 改进代码
 
 ```java
 Options opts = getOptions();
 File scratchDir = opts.getScratchDir();
 final String outputDir = scratchDir.getAbsolutePath()
+```
+
+#### 隐藏结构
+
+通过ctxt的最终目的，发现ctxt最终是提供路径以让别的函数获得ctxt的stream，如若是这样，那还不如直接由ctxt来提供此方法，以此来避免违反德墨忒尔律
+
+```java
+BufferedOutputStream bos = ctxt.createScratchFileStream(classFileName)
 ```
